--- a/style.css
+++ b/style.css
@@ -160,19 +160,19 @@ font-size: 22px;
     font-weight: 700;
     font-size: 14px;
 }
-section.skills{
+section.skills, section.hobbies{
   /* padding: 10px 153px; */
   display: flex;
   flex-direction: column;
   
 }
-.skills__line{
+.skills__line, .hobbies__line{
     display: flex;
     /* flex-direction: row; */
     flex-wrap: wrap;
     padding:0  10px 0 10px;
 }
-.skills__box{
+.skills__box, .hobbies__box{
     width: 156px;
     height: 118px;
     background-color: #ffffff;
@@ -182,27 +182,64 @@ section.skills{
     box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.2);
 
 }
-.skills__img img{
+.skills__img img, .hobbies__img img {
     width: 66px;
    
 }
-/*Sección Hobbies*/
-
-section.hobbies{
-    padding: 10px 153px;
-}
-
-/* Experiencia Académica*/
 
 section.academic{
-    padding: 10px 153px;
+    display: flex;
+    flex-direction: column;
+    background-color:#EAF2FD ;
+    align-items: center;
+}
+.academic__title{
+    padding-left: 15px;
+}
+.academic__courses{
+display: flex;
+flex-direction: column;
+flex-wrap: nowrap;
+padding:0  10px 0 10px;
+align-items: center;
+}
+.academic__courses__box{
+    display: flex;
+   
+    justify-content: center;
+    width: 296px;
+    height: 230px;
+    background-color: #ffffff;
+    margin: 0 5px 10px 5px;
+    border: #000 solid 1px;
+    border-radius: 5%;
+    box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.2);
+    padding-left: 0px;
 }
 
-/* experiencia*/
+.academic__courses__list{
+ padding-left: 0px; 
+ 
+}
+.academic__courses__list li{
+ display: flex;
+ justify-content: center;
+ 
+ padding-left: 0px;
+
+}
+    .academic__courses__item__img img{
+        width: 84px;
+        height: 105px;
+    }
 
 section.experience{
-    padding: 10px 153px;
+    display: flex;
+    flex-direction: column;
 }
+
+
+
 
 /*Contacto*/
 
